# python_package_template

./: .pre-commit-config.yaml  pyproject.toml
.github/workflows/: pipeline.yml
docs/source/: conf.py
pypackage_template/: __init__.py
scripts/: converage.sh  publish.sh  type_check.sh
tests/: test_pypackage.py
